--- a/www/.htaccess
+++ b/www/.htaccess
@@ -89,7 +89,7 @@
 # https://httpd.apache.org/docs/current/mod/core.html#errordocument
 
 #ErrorDocument 403 /403.html
-ErrorDocument 404 /404.html
+#ErrorDocument 404 /404.html
 
 # ----------------------------------------------------------------------
 # | Error prevention                                                   |
